# Pollcord

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
Pollcord/: __init__.py  client.py  error.py  poll.py  pollcord.py
examples/: basic.py  concurrency.py  lifecycle.py  rate_limit.py
logo/: Pollcord Logo.psd
tests/: test_poll_creation.py  test_poll_end.py  test_poll_fetchers.py
