[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
]
[project]
name = "Pollcord"
version = "0.1b2"
description = "Async Python wrapper for Discord's native polling API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Myst1cS04p", email = "myst1cs04p@gmail.com" }
]
keywords = ["discord", "polls", "polling", "discord-api", "asyncio"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "aiohttp>=3.8",
]

[project.urls]
"Homepage" = "https://github.com/Myst1cS04p/Pollcord"
"Repository" = "https://github.com/Myst1cS04p/Pollcord"
